--- a/controller.yaml
+++ b/controller.yaml
@@ -253,6 +253,10 @@ parameters:
         lower level default.
     type: number
     default: 0
+  MysqlMaxConnections:
+    description: Configures MySQL max_connections config setting
+    type: number
+    default: 1024
   MysqlRootPassword:
     type: string
     hidden: true
