--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -22,6 +22,7 @@ rabbitmq_config_variables:
   cluster_partition_handling: 'pause_minority'
 
 mongodb::server::replset: tripleo
+mongodb::server::journal: false
 
 redis::port: 6379
 redis::sentinel::master_name: "%{hiera('bootstrap_nodeid')}"
