Enable Cisco N1KV driver
This enables support for the Cisco N1kv driver for the ML2 plugin.
It also configures the Nexus 1000v switch.

Co-Authored-By: Steven Hillman <sthillma@cisco.com>

Depends-On: I02dda0685c7df9013693db5eeacb2f47745d05b5
Depends-On: I3f14cdce9b9bf278aa9b107b2d313e1e82a20709

Change-Id: Idf23ed11a53509c00aa5fea4c87a515f42ad744f

--- a/puppet/compute.yaml
+++ b/puppet/compute.yaml
@@ -360,6 +360,7 @@ resources:
             - all_nodes # provided by allNodesConfig
             - '"%{::osfamily}"'
             - common
+            - cisco_n1kv_data  # Optionally provided by ComputeExtraConfigPre
           datafiles:
             compute_extraconfig:
               mapped_data: {get_param: NovaComputeExtraConfig}
