--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -61,8 +61,7 @@ parameters:
   ControllerExtraConfig:
     default: {}
     description: |
-      Controller specific configuration to inject into the cluster. Same
-      structure as ExtraConfig.
+      Controller specific hiera configuration data to inject into the cluster.
     type: json
   ControlVirtualInterface:
     default: 'br-ex'
@@ -91,40 +90,8 @@ parameters:
   ExtraConfig:
     default: {}
     description: |
-      Additional configuration to inject into the cluster. The JSON should have
-      the following structure:
-        {"FILEKEY":
-          {"config":
-            [{"section": "SECTIONNAME",
-              "values":
-                [{"option": "OPTIONNAME",
-                  "value": "VALUENAME"
-                 }
-                ]
-             }
-            ]
-          }
-        }
-      For instance:
-        {"nova":
-          {"config":
-            [{"section": "default",
-              "values":
-                [{"option": "compute_manager",
-                  "value": "ironic.nova.compute.manager.ClusterComputeManager"
-                 }
-                ]
-             },
-             {"section": "cells",
-              "values":
-                [{"option": "driver",
-                  "value": "nova.cells.rpc_driver.CellsRPCDriver"
-                 }
-                ]
-             }
-            ]
-          }
-        }
+      Additional hieradata to inject into the cluster, note that
+      ControllerExtraConfig takes precedence over ExtraConfig.
     type: json
   FencingConfig:
     default: {}
@@ -868,6 +835,8 @@ resources:
         hiera:
           hierarchy:
             - heat_config_%{::deploy_config_name}
+            - controller_extraconfig
+            - extraconfig
             - controller
             - object
             - swift_devices_and_proxy # provided by SwiftDevicesAndProxyConfig
@@ -880,6 +849,10 @@ resources:
             - common
             - cinder_netapp_data # Optionally provided by ControllerExtraConfigPre
           datafiles:
+            controller_extraconfig:
+              mapped_data: {get_param: ControllerExtraConfig}
+            extraconfig:
+              mapped_data: {get_param: ExtraConfig}
             common:
               raw_data: {get_file: hieradata/common.yaml}
             ceph:
