Allow enabling debug mode for config management (Puppet)
Also adds an environment file which can be passed to heat stack-create
to enable debugging.

Change-Id: I9758e2ca3de6a0bed6d20c37ea19e48f47220721
Depends-On: Ie92d1714a8d7e59d347474039be999bd3a2b542f

--- a/puppet/cinder-storage-post.yaml
+++ b/puppet/cinder-storage-post.yaml
@@ -2,6 +2,10 @@ heat_template_version: 2015-04-30
 description: 'OpenStack cinder storage post deployment for Puppet'
 
 parameters:
+  ConfigDebug:
+    default: false
+    description: Whether to run config management (e.g. Puppet) in debug mode.
+    type: boolean
   servers:
     type: json
   NodeConfigIdentifiers:
@@ -14,6 +18,8 @@ resources:
     type: OS::Heat::SoftwareConfig
     properties:
       group: puppet
+      options:
+        enable_debug: {get_param: ConfigDebug}
       outputs:
       - name: result
       config:
