--- a/puppet/controller-post.yaml
+++ b/puppet/controller-post.yaml
@@ -4,6 +4,10 @@ description: >
   OpenStack controller node post deployment for Puppet.
 
 parameters:
+  ConfigDebug:
+    default: false
+    description: Whether to run config management (e.g. Puppet) in debug mode.
+    type: boolean
   servers:
     type: json
   NodeConfigIdentifiers:
@@ -46,6 +50,7 @@ resources:
     properties:
       group: puppet
       options:
+        enable_debug: {get_param: ConfigDebug}
         enable_hiera: True
         enable_facter: False
       inputs:
