--- a/puppet/compute-post.yaml
+++ b/puppet/compute-post.yaml
@@ -4,6 +4,10 @@ description: >
   OpenStack compute node post deployment for Puppet.
 
 parameters:
+  ConfigDebug:
+    default: false
+    description: Whether to run config management (e.g. Puppet) in debug mode.
+    type: boolean
   servers:
     type: json
   NodeConfigIdentifiers:
@@ -17,6 +21,8 @@ resources:
     type: OS::Heat::SoftwareConfig
     properties:
       group: puppet
+      options:
+        enable_debug: {get_param: ConfigDebug}
       outputs:
       - name: result
       config:
