Wire in hieradata overrides via ExtraConfig for BlockStorage
Adds support for global (ExtraConfig) and role-specific
(BlockStorageExtraConfig) hiera overrides, similar to those added
for the Controller and NovaCompute roles.

Change-Id: Iaf9665b53407e6a657f56d6516469f2c88bafbdd

--- a/cinder-storage.yaml
+++ b/cinder-storage.yaml
@@ -62,6 +62,11 @@ parameters:
           }
         }
     type: json
+  BlockStorageExtraConfig:
+    default: {}
+    description: |
+      Role specific additional configuration to inject into the cluster.
+    type: json
   Flavor:
     description: Flavor for block storage nodes to request when deploying.
     type: string
