--- a/puppet/cinder-storage-puppet.yaml
+++ b/puppet/cinder-storage-puppet.yaml
@@ -31,40 +31,13 @@ parameters:
   ExtraConfig:
     default: {}
     description: |
-      Additional configuration to inject into the cluster. The JSON should have
-      the following structure:
-        {"FILEKEY":
-          {"config":
-            [{"section": "SECTIONNAME",
-              "values":
-                [{"option": "OPTIONNAME",
-                  "value": "VALUENAME"
-                 }
-                ]
-             }
-            ]
-          }
-        }
-      For instance:
-        {"nova":
-          {"config":
-            [{"section": "default",
-              "values":
-                [{"option": "force_config_drive",
-                  "value": "always"
-                 }
-                ]
-             },
-             {"section": "cells",
-              "values":
-                [{"option": "driver",
-                  "value": "nova.cells.rpc_driver.CellsRPCDriver"
-                 }
-                ]
-             }
-            ]
-          }
-        }
+      Additional hiera configuration to inject into the cluster. Note
+      that BlockStorageExtraConfig takes precedence over ExtraConfig.
+    type: json
+  BlockStorageExtraConfig:
+    default: {}
+    description: |
+      Role specific additional hiera configuration to inject into the cluster.
     type: json
   Flavor:
     description: Flavor for block storage nodes to request when deploying.
@@ -235,6 +208,8 @@ resources:
         hiera:
           hierarchy:
             - heat_config_%{::deploy_config_name}
+            - volume_extraconfig
+            - extraconfig
             - volume
             - all_nodes # provided by allNodesConfig
             - '"%{::osfamily}"'
@@ -242,6 +217,10 @@ resources:
           datafiles:
             common:
               raw_data: {get_file: hieradata/common.yaml}
+            volume_extraconfig:
+              mapped_data: {get_param: BlockStorageExtraConfig}
+            extraconfig:
+              mapped_data: {get_param: ExtraConfig}
             volume:
               raw_data: {get_file: hieradata/volume.yaml}
               mapped_data:
