--- a/swift-storage.yaml
+++ b/swift-storage.yaml
@@ -39,6 +39,11 @@ parameters:
           }
         }
     type: json
+  ObjectStorageExtraConfig:
+    default: {}
+    description: |
+      Role specific additional configuration to inject into the cluster.
+    type: json
   Flavor:
     description: Flavor for Swift storage nodes to request when deploying.
     type: string
