Wire in hieradata overrides via ExtraConfig for CephStorage
Adds support for global (ExtraConfig) and role-specific
(CephStorageExtraConfig) hiera overrides, similar to those added
for the Controller, NovaCompute, BlockStorage, ObjectStorage roles.

Change-Id: Idbe73b86a772491cd3c55ba69b5a95cc291d2598

--- a/ceph-storage.yaml
+++ b/ceph-storage.yaml
@@ -42,6 +42,18 @@ parameters:
   Hostname:
     type: string
     default: '' # Defaults to Heat created hostname
+  ExtraConfig:
+    default: {}
+    description: |
+      Additional configuration to inject into the cluster. Note
+      that CephStorageExtraConfig takes precedence over ExtraConfig.
+    type: json
+  CephStorageExtraConfig:
+    default: {}
+    description: |
+      Role specific additional configuration to inject into the cluster.
+    type: json
+
 
 resources:
   CephStorage:
