--- a/puppet/ceph-storage-puppet.yaml
+++ b/puppet/ceph-storage-puppet.yaml
@@ -42,6 +42,18 @@ parameters:
   Hostname:
     type: string
     default: '' # Defaults to Heat created hostname
+  ExtraConfig:
+    default: {}
+    description: |
+      Additional hiera configuration to inject into the cluster. Note
+      that CephStorageExtraConfig takes precedence over ExtraConfig.
+    type: json
+  CephStorageExtraConfig:
+    default: {}
+    description: |
+      Role specific additional hiera configuration to inject into the cluster.
+    type: json
+
 
 resources:
   CephStorage:
@@ -118,6 +130,8 @@ resources:
         hiera:
           hierarchy:
             - heat_config_%{::deploy_config_name}
+            - ceph_extraconfig
+            - extraconfig
             - ceph_cluster # provided by CephClusterConfig
             - ceph
             - '"%{::osfamily}"'
@@ -125,6 +139,10 @@ resources:
           datafiles:
             common:
               raw_data: {get_file: hieradata/common.yaml}
+            ceph_extraconfig:
+              mapped_data: {get_param: CephStorageExtraConfig}
+            extraconfig:
+              mapped_data: {get_param: ExtraConfig}
             ceph:
               raw_data: {get_file: hieradata/ceph.yaml}
               mapped_data:
