Ensure CinderStorage nodes use internalURL as catalog_info
By default Cinder will get the publicURL for Nova and Swift, which
is not reachable by the CinderStorage nodes.

Change-Id: I25b7900c9ab261e0f706257ffdf6844533b63b94

--- a/puppet/hieradata/volume.yaml
+++ b/puppet/hieradata/volume.yaml
@@ -3,4 +3,10 @@
 # cinder
 cinder::scheduler::scheduler_driver: cinder.scheduler.filter_scheduler.FilterScheduler
 
+cinder::config::cinder_config:
+  DEFAULT/nova_catalog_info:
+    value: 'compute:Compute Service:internalURL'
+  DEFAULT/swift_catalog_info:
+    value: 'object-store:swift:internalURL'
+
 volume_classes: []
