Allow overlapping IPs in Neutron
Change-Id: I7703013b62bd67869c268fb8689389ec0eeb5aad

--- a/puppet/hieradata/common.yaml
+++ b/puppet/hieradata/common.yaml
@@ -13,6 +13,7 @@ nova::network::neutron::vif_plugging_is_fatal: false
 nova::network::neutron::vif_plugging_timeout: 30
 nova::network::neutron::dhcp_domain: ''
 
+neutron::allow_overlapping_ips: true
 neutron::plugins::ml2::type_drivers:
   - flat
   - gre
