Set rabbitmq heatbeat timeout threshold to 60
Updates the default settings for Nova, Neutron, Cinder,
Ceilometer, and Heat services so we set the default rabbitmq
threshold to 60 seconds.

Change-Id: If537ae16968eb6b264b2ab071144f1eecab18b64

--- a/puppet/hieradata/common.yaml
+++ b/puppet/hieradata/common.yaml
@@ -26,3 +26,9 @@ sysctl_settings:
     value: 5
   net.ipv4.tcp_keepalive_time:
     value: 5
+
+nova::rabbit_heartbeat_timeout_threshold: 60
+neutron::rabbit_heartbeat_timeout_threshold: 60
+cinder::rabbit_heartbeat_timeout_threshold: 60
+ceilometer::rabbit_heartbeat_timeout_threshold: 60
+heat::rabbit_heartbeat_timeout_threshold: 60
