Use 'public' instead of 'nova' as default floating pool name
The dafault in nova.conf for default_floating_pool is set to nova
which is confusing given to make Tempest tests to pass one has to
create a public network with such a name.

Change-Id: I148222a9f276309ede062ee5292993898ff899d6

--- a/puppet/hieradata/compute.yaml
+++ b/puppet/hieradata/compute.yaml
@@ -18,6 +18,8 @@ nova::compute::rbd::libvirt_rbd_secret_uuid: "%{hiera('ceph::profile::params::fs
 nova::config::nova_config:
   cinder/catalog_info:
     value: 'volumev2:cinderv2:internalURL'
+  DEFAULT/default_floating_pool:
+    value: 'public'
 
 ceilometer::agent::auth::auth_tenant_name: 'service'
 
