--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -73,6 +73,10 @@ neutron::agents::dhcp::dnsmasq_config_file: /etc/neutron/dnsmasq-neutron.conf
 nova::notify_on_state_change: 'vm_and_task_state'
 nova::api::osapi_v3: true
 
+nova::config::nova_config:
+  DEFAULT/default_floating_pool:
+    value: 'public'
+
 # cinder
 cinder::scheduler::scheduler_driver: cinder.scheduler.filter_scheduler.FilterScheduler
 
